# codebase-analyzer-mcp

./: .gitignore  GIT_INTEGRATION.md  MARKDOWN_PARSER_SUMMARY.md  MCP_TEST_SUITE_README.md  PARSER_REFACTORING_SUMMARY.md  QUERIES_MIGRATION.md  README.md  SWIFT_PARSER_DOCUMENTATION.md  SWIFT_PARSER_SUMMARY.md  SWIFT_SCM_GUIDE.md  db.py  delete_hidden_files.sql  embeddings.py  generate_parsers.py  git_utils.py  index_codebase.py  main.py  models.py  parser.py  pyproject.toml  requirements.txt  run_integration_tests.py  run_mcp_tests.py  server-info.json  t.scm  test_mcp_integration.py  test_mcp_tools.py  test_swift_parser.py
grammars/: swift.dylib
parsers/: __init__.py  base_parser.py  bash_parser.py  code_parser.py  comprehensive_parser.py  cpp_parser.py  csharp_parser.py  css_parser.py  elisp_parser.py  elixir_parser.py  go_parser.py  html_parser.py  java_parser.py  javascript_parser.py  json_parser.py  kotlin_parser.py  language_parser_factory.py  lua_parser.py  markdown_parser.py  ocaml_parser.py  php_parser.py  python_parser.py  ruby_parser.py  rust_parser.py  scala_parser.py  solidity_parser.py  swift_parser.py  systemrdl_parser.py  tlaplus_parser.py  toml_parser.py  vue_parser.py  yaml_parser.py  zig_parser.py
queries/: swift_minimal.ts  swift_simple.ts
queries_scm/: bash.scm  css.scm  elisp.scm  elixir.scm  javascript.scm  json.scm  kotlin.scm  markdown.scm  ocaml.scm  php.scm  python.scm  ruby.scm  scala.scm  solidity.scm  swift.scm  swift_minimal.scm  swift_simple.scm  toml.scm  tsx.scm  typescript.scm  vue.scm  zig.scm
test_codebase/: simple_test.json  simple_test.py  test_comprehensive_parser.py  test_json_file.json  test_json_parser.py  test_markdown_file.md  test_markdown_parser.py  test_python_parser_simple.py  test_swift_file.swift  test_unknown_symbols.py
(+1 files in other folders)
