[project]
name = "codebase-analyzer"
version = "0.1.0"
description = "FastMCP server for codebase parsing and semantic search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "pip>=25.1.1",
    "sqlite-vec>=0.1.6",
    "tree-sitter>=0.25.0",
    "tree-sitter-swift>=0.0.1",
    "spacy>=3.7.0",
    "uvicorn>=0.24.0",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-json>=0.24.8",
    "tree-sitter-languages>=1.10.2",
    "tree-sitter-bash>=0.25.0",
    "tree-sitter-kotlin",
    "tree-sitter-markdown",
    "gitpython>=3.1.45",
]

[project.scripts]
codebase-analyzer = "main:main"

[tool.uv.workspace]
members = [
    "grammars/tree-sitter-bash",
    "grammars/tree-sitter-kotlin",
    "grammars/tree-sitter-python",
    "grammars/tree-sitter-swift",
    "grammars/tree-sitter-markdown",
    "grammars/tree-sitter-json",
]

[tool.uv.sources]
tree-sitter-bash = { workspace = true }
tree-sitter-kotlin = { workspace = true }
tree-sitter-markdown = { workspace = true }
tree-sitter-python = { workspace = true }
tree-sitter-swift = { workspace = true }
tree-sitter-json = { workspace = true }
